# fullbazel

./: .bazelrc  .eslintignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKSPACE  dependencies.bzl  docker-compose.yaml  package.json  tsconfig.json  tsconfig.test.json  tslint.json
angular-architect/: BUILD.bazel  angular.json  karma.conf.js  tsconfig.json
angular-architect/src/: polyfills.ts  test.ts
angular-architect/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
angular-client/app/: BUILD.bazel  app-dev.module.ts  app-prod-browser.module.ts  app-routing.module.ts  app.component.sass  app.component.ts
angular-client/e2e/: BUILD.bazel  app.e2e-spec.ts
angular-client/environment/: BUILD.bazel  dev.ts
angular-client/features/home/: BUILD.bazel  home.component.sass
angular-client/shared/: BUILD.bazel  index.ts
angular-client/store/: BUILD.bazel
angular-client/store/auth/: auth.effects.ts  auth.reducer.ts  index.ts
angular-client/store/messages/: messages.selectors.ts
angular-client/store/router/: BUILD.bazel
angular-client/store/users/: index.ts  users.selectors.ts
client/: BUILD.bazel  app.html  index.html  main.dev.ts  main.prod.ts  manifest.webmanifest  ngsw-config.json  pwa.html  server.ts  styles.sass  template.html  tsconfig.json
client/app/: BUILD.bazel  app-base.module.ts  app-dev.module.ts  app-prod.module.ts  app-routing.module.ts  app.component.sass  app.component.ts  app.server.module.ts  navigation.component.sass  navigation.component.ts  push-notification.service.ts  service-worker.service.ts
client/assets/: BUILD.bazel
client/environment/: BUILD.bazel  dev.environment.ts  index.ts  prod.environment.ts  setup-script.ts
client/features/about/: BUILD.bazel  about.component.sass  about.component.ts  about.module.ts
client/features/home/: BUILD.bazel  home.component.sass  home.component.ts  home.module.ts
client/features/realtime/: BUILD.bazel  quote.actions.ts  quote.effects.ts  quote.reducer.ts  quote.selectors.ts  quote.state.ts  realtime.component.sass  realtime.component.ts  realtime.module.ts
client/store/: BUILD.bazel  index.ts  store.module.ts
client/store/router/: BUILD.bazel  index.ts  router.state.ts
libraries/testing/: BUILD.bazel  tsconfig.json
libraries/websocket-store/: BUILD.bazel  websocket.effects.ts  websocket.reducer.ts  websocket.selectors.ts  websocket.state.ts
libs/config/: BUILD.bazel  config.ts  example.config  flatten-object.ts  generate-client-env.ts  generate-client-envs.ts  generate-config-schema.ts  generate-dc-env.ts  generate-flat-config-keys.ts  generate-k8s-configs.ts  generate-k8s-secrets.ts  generate-secrets-schema.ts  index.ts  tsconfig.json  utils.ts
libs/config/configs/: config.schema.json  dev.config.json  prod.config.json
libs/config/secrets/: dev.secrets-example.json  example.secrets.json  prod.secrets-example.json  secret.schema.json
libs/enums/: BUILD.bazel  consumer-groups.ts  cookie-names.ts  index.ts  messages.ts  tags.ts  token-expiration.ts
libs/schema/: BUILD.bazel  index.ts  message.ts  quote.ts  socket-message.ts  user.ts
libs/types/: BUILD.bazel  access.token.ts  id.ts  index.ts  refresh.token.ts  timestamp.test.ts  timestamp.ts  token.test.ts  token.ts
libs/ui-elements/: BUILD.bazel  button.component.sass  button.component.ts  index.ts  tsconfig.json  ui-elements.module.ts
libs/ui-elements/snackbar/: index.ts  snackbar.componen.ts  snackbar.module.ts  snackbar.state.ts
nodejs-server/: BUILD.bazel  event-dispatcher.ts  index.ts  messages.repository.test.ts  messages.repository.ts  push-subscription.repository.test.ts  push-subscription.repository.ts  tsconfig.json  user.repository.test.ts
services/client/: BUILD.bazel  client.yaml  initialize_testbed.ts  main.dev.ts  main.html  main.prod.ts  manifest.webmanifest  server.ts  styles.sass  tsconfig.json
services/client/app/: BUILD.bazel  app-base.module.ts  app-dev.module.ts  app-initializer.ts  app-prod-browser.module.ts  app-prod.module.ts  app-routing.module.ts  app.component.sass  app.component.ts  app.server.module.ts  auth.service.ts  navigation.component.sass  navigation.component.ts  push-notification.service.ts  service-worker.service.ts
services/client/e2e/: BUILD.bazel  app.e2e-spec.ts  app.po.ts  on-prepare.ts
services/client/environment/: BUILD.bazel  dev.ts  environment.ts  index.ts
services/client/features/about/: BUILD.bazel  about.component.ts  about.module.ts
services/client/features/architecture/: BUILD.bazel  architecture.component.ts  architecture.module.ts
services/client/features/discussions/: BUILD.bazel  discussions.actions.ts  discussions.component.sass  discussions.component.ts  discussions.effects.ts  discussions.module.ts  discussions.reducer.ts  discussions.selectors.ts  discussions.state.ts  index.ts  users.reducer.ts  users.selectors.ts
services/client/features/docs/: BUILD.bazel  docs.component.spec.ts  docs.module.ts
services/client/features/home/: BUILD.bazel  home.component.sass  home.component.spec.ts  home.component.ts  home.module.ts
services/client/features/realtime/: BUILD.bazel  quote.actions.ts  quote.effects.ts  quote.reducer.ts  quote.selectors.ts  realtime.component.sass  realtime.component.ts  realtime.module.ts
services/client/shared/: BUILD.bazel  push-notification.service.ts  shared.module.ts
services/client/store/: BUILD.bazel  index.ts  store.module.ts
services/client/store/auth/: auth.actions.ts  auth.effects.ts  auth.reducer.ts  auth.selectors.ts
services/client/store/messages/: index.ts  messages.actions.ts  messages.effects.ts  messages.reducer.ts
services/client/store/router/: BUILD.bazel  custom-route-serializer.ts  router.selectors.ts
services/server/: BUILD.bazel  event-dispatcher.ts  event-listener.ts  google.adapter.ts  index.ts  messages.repository.test.ts  messages.repository.ts  push-subscription.repository.test.ts  push-subscription.repository.ts  server.yaml  tsconfig.json  user.repository.test.ts  user.repository.ts
(+191 files in other folders)
