load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

k8s_objects(
    name = "kubernetes",
    objects = [
        "//libs/kubernetes:nginx_ingress_config",
        "//libs/kubernetes:strimzi_kafka",
        "//services/client:kubernetes",
        "//nodejs-server:kubernetes",
    ],
)
