load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

k8s_objects(
    name = "kubernetes",
    objects = [
        "//libraries/kubernetes:certificate_issuer",
        "//libraries/kubernetes:nginx_ingress_config",
        "//libraries/kubernetes:strimzi_kafka",
        "//angular-client:kubernetes",
        "//nodejs-server:kubernetes",
        "//nextjs-client:kubernetes",
    ],
)
