load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

INTEGRATION_TESTS = [
    "user.repository.test.ts",
    "push-subscription.repository.test.ts",
    "messages.repository.test.ts",
]

ts_library(
    name = "lib",
    srcs = glob(
        include = ["*.ts"],
        exclude = INTEGRATION_TESTS,
    ),
    tsconfig = "tsconfig",
    deps = [
        "//libs/config:config_lib",
        "//libs/enums",
        "//libs/schema",
        "//libs/types",
        "@npm//@types/async-retry",
        "@npm//@types/body-parser",
        "@npm//@types/cookie",
        "@npm//@types/cookie-parser",
        "@npm//@types/cors",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//@types/uuid",
        "@npm//@types/web-push",
        "@npm//@types/ws",
        "@npm//async-retry",
        "@npm//axios",
        "@npm//body-parser",
        "@npm//cookie",
        "@npm//cookie-parser",
        "@npm//cors",
        "@npm//express",
        "@npm//inversify",
        "@npm//kafkajs",
        "@npm//mysql2",
        "@npm//query-string",
        "@npm//reflect-metadata",
        "@npm//rxjs",
        "@npm//uuid",
        "@npm//web-push",
        "@npm//ws",
    ],
)

ts_library(
    name = "integration_test_lib",
    srcs = INTEGRATION_TESTS,
    tsconfig = "tsconfig",
    deps = [
        "lib",
        "//libs/config:config_lib",
        "//libs/schema",
        "//libs/testing",
        "//libs/types",
        "@npm//@types/async-retry",
        "@npm//@types/web-push",
        "@npm//async-retry",
        "@npm//inversify",
        "@npm//reflect-metadata",
        "@npm//testcontainers",
        "@npm//web-push",
    ],
)

nodejs_image(
    name = "image",
    data = ["lib"],
    entry_point = "index.ts",
    templated_args = ["--bazel_patch_module_resolver"],
)

k8s_deploy(
    name = "kubernetes",
    images = {"server:latest": "image"},
    template = "server.yaml",
)
