load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//libraries/angular-tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//angular-client:__subpackages__"])

sass_binary(
    name = "app_styles",
    src = "app.component.sass",
)

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
        "app-routing.module.ts",
        "service-worker.service.ts",
    ],
    angular_assets = ["app_styles"],
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "//angular-client/environment",
        "//angular-client/features/discussions",
        "//angular-client/features/docs",
        "//angular-client/features/home",
        "//angular-client/shared",
        "//angular-client/store",
        "//libraries/schema",
        "//libraries/ui-elements",
        "//libraries/websocket-store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "base",
        "//angular-client/environment",
        "//angular-client/store",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store-devtools",
    ],
)

ng_ts_library(
    name = "prod_browser",
    srcs = ["app-prod-browser.module.ts"],
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        ":base",
        "//angular-client/environment",
        "//angular-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "base",
        "//angular-client/environment",
        "//angular-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "base",
        "prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
    ],
)
