# load("@npm//@bazel/protractor:index.bzl", "protractor_web_test_suite")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "e2e",
    testonly = 1,
    srcs = [
        "app.e2e-spec.ts",
        "app.po.ts",
    ],
    tsconfig = "//angular-client:tsconfig_test",
    deps = [
        "@npm//@types/jasmine",
        "@npm//jasmine",
        "@npm//protractor",
    ],
)

ts_library(
    name = "on_prepare",
    testonly = 1,
    srcs = ["on-prepare.ts"],
    tsconfig = "//angular-client:tsconfig_test",
    deps = [
        "@npm//@bazel/protractor",
        "@npm//@types/node",
        "@npm//protractor",
    ],
)

# TODO create a test version of the angular app and use it for e2e testing

# protractor_web_test_suite(
#     name = "pwa_server",
#     on_prepare = "on_prepare",
#     server = "//angular-client:pwa_server",
#     deps = [":e2e"],
# )

# protractor_web_test_suite(
#     name = "dev_server",
#     on_prepare = "on_prepare",
#     server = "//angular-client:dev_server",
#     deps = [":e2e"],
# )

# protractor_web_test_suite(
#     name = "universal_server",
#     on_prepare = "on_prepare",
#     server = "//angular-client:client",
#     deps = [":e2e"],
# )
