load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//angular-client:__subpackages__"])

ts_library(
    name = "environment",
    srcs = glob(["*.ts"]),
    module_name = "@client/environment",
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "@npm//@angular/core",
    ],
)
