load("//libraries/angular-tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//angular-client:__subpackages__"])

ng_ts_library(
    name = "shared",
    srcs = glob(["**/*.ts"]),
    module_name = "@client/shared",
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "//angular-client/environment",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)
