load("//libraries/angular-tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//angular-client:__subpackages__"])

ng_ts_library(
    name = "store",
    srcs = glob(["**/*.ts"]),
    module_name = "@client/store",
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "//angular-client/environment",
        "//angular-client/store/router",
        "//libraries/enums",
        "//libraries/schema",
        "//libraries/websocket-store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/entity",
        "@npm//@ngrx/router-store",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
