load("@io_bazel_rules_sass//:defs.bzl", "multi_sass_binary")
load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//client:__subpackages__"])

multi_sass_binary(
    name = "styles",
    srcs = glob(include = ["**/*.sass"]),
)

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
        "app-routing.module.ts",
        "navigation.component.ts",
        "push-notification.service.ts",
        "service-worker.service.ts",
    ],
    angular_assets = [":styles"],
    tsconfig = "//client:tsconfig.json",
    deps = [
        "//client/environment",
        "//client/features/about",
        "//client/features/home",
        "//client/features/realtime",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//client:tsconfig.json",
    deps = [
        ":base",
        "//client/environment",
        "//client/store",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store-devtools",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//client:tsconfig.json",
    deps = [
        ":base",
        "//client/environment",
        "//client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//client:tsconfig.json",
    deps = [
        ":base",
        ":prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-server",
    ],
)
