load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//client:__subpackages__"])

ts_library(
    name = "environment",
    srcs = [
        "environment.ts",
        "index.ts",
    ],
    module_name = "@client/environment",
    tsconfig = "//client:tsconfig.json",
    deps = [
        "@npm//@angular/core",
    ],
)
