load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_library(
    name = "enums",
    srcs = glob(["**/*.ts"]),
    module_name = "@libs/enums",
    tsconfig = "tsconfig",
)
