load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//services:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_library(
    name = "schema",
    srcs = glob(["**/*.ts"]),
    module_name = "@libs/schema",
    tsconfig = "tsconfig",
)
