load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

package(default_visibility = ["//:__subpackages__"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_library(
    name = "types",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    module_name = "@libs/types",
    tsconfig = "tsconfig",
)

ts_library(
    name = "test_lib",
    srcs = glob(["**/*.test.ts"]),
    deps = [
        "types",
        "@npm//@types/jasmine",
        "@npm//jasmine",
    ],
)

jasmine_node_test(
    name = "test",
    config_file = "//dev:jasmine.json",
    templated_args = ["--bazel_patch_module_resolver"],
    deps = ["test_lib"],
)
