load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//services/client:__subpackages__"])

sass_binary(
    name = "styles",
    src = "button.component.sass",
)

ng_ts_library(
    name = "ui-elements",
    srcs = glob(["**/*.ts"]),
    angular_assets = ["styles"],
    module_name = "@libs/ui-elements",
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
