load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//services/client:__subpackages__"])

sass_binary(
    name = "snackbar_styles",
    src = "snackbar/snackbar.component.sass",
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ng_ts_library(
    name = "ui-elements",
    srcs = glob(["**/*.ts"]),
    angular_assets = ["snackbar_styles"],
    module_name = "@libs/ui-elements",
    tsconfig = "tsconfig",
    deps = [
        "@npm//@angular/animations",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)
